[package]
name = "gauc"
version = "0.1.0"
authors = []

[lib]
name = "gauc"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
# dyon = "0.24.7"
byteorder = "1.1"
gauc = { git = "https://github.com/korczis/gauc" }
lazy_static = "0.2"
rustler = "0.15.1"
rustler_codegen = "0.15.1"
uuid = { version = "0.5", features = ["v4"] }