[package]
name = "gauc"
version = "0.6.1"
authors = []

[lib]
name = "gauc"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
byteorder = "1.1"
gauc = "0.6.1"
# gauc = { version = "0.6.1", path = "../../../gauc" }
lazy_static = "0.2"
rustler = "0.15.1"
rustler_codegen = "0.15.1"
uuid = { version = "0.5", features = ["v4"] }