[package]
name = "gauc"
version = "0.8.0"
authors = []

[lib]
name = "gauc"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
byteorder = "1.1"
gauc = "0.8"
# gauc = { version = "0.6.1", path = "../../../gauc" }
lazy_static = "0.2"
# bring back version after rustler > 0.15.1 is release
rustler = { git = "https://github.com/hansihe/rustler" }
rustler_codegen = "0.15.1"
uuid = { version = "0.5", features = ["v4"] }
